--- a/app/views/spina/admin/hooks/knowledgebase/_primary_navigation.html.erb
+++ b/app/views/spina/admin/hooks/knowledgebase/_primary_navigation.html.erb
@@ -1,6 +1,6 @@
 <%= render Spina::MainNavigation::SubNavComponent.new(:knowledgebase) do |nav| %>
   <% nav.with_icon do %>
-    <%= heroicon('pencil', style: :solid, class: 'w-8 h-8 text-white md:mr-3') %>
+    <%= heroicon('lifebuoy', style: :solid, class: 'w-8 h-8 text-white md:mr-3') %>
     
     <div class="text-white font-semibold hidden md:block transform -translate-x-2 ease-in-out duration-300 absolute md:relative opacity-0 transition-all" data-navigation-target="label">
       <%=t 'spina.knowledgebase.title' %>
